Changes IN non tech streams + clean up

--- a/lmtsm.html
+++ b/lmtsm.html
@@ -111,8 +111,8 @@
               </p>
 
 
-              <a href="https://zoom.us/j/97726398272" target="_blank" class="btn btn-primary d-block px-2 py-3"><span
-                  class="fa fa-video-camera" style="padding: 10px;"></span>Connect With Us</a>
+              <!-- <a href="https://zoom.us/j/97726398272" target="_blank" class="btn btn-primary d-block px-2 py-3"><span
+                  class="fa fa-video-camera" style="padding: 10px;"></span>Connect With Us</a> -->
             </div>
           </div>
         </div>
@@ -144,53 +144,13 @@
           <!--Browser does not support <video> tag -->
           </video>
         </div>
-        <!-- <div class="row justify-content-center pb-5 mb-3">
-<div class="col-md-7 heading-section text-center ftco-animate">
-<h2 style="padding-left:200px;">Connect With Us</h2>
-</div>
-</div>
-<div class="row">
-<div class="col-md-4 ftco-animate">
-<div class="block-7">
-<div class="img" style="background-image: url(images/dipto.jpeg);"></div>
-<div class="text-center p-4">
-<span class="excerpt d-block"style="text-align: center;">Mr Dipto Barman</span>
-
-<a href="https://tiet.zoom.us/my/diptobarman" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
-</div>
-</div>
-</div>
-<div class="col-md-4 ftco-animate">
-<div class="block-7">
-<div class="img" style="background-image: url(images/dipto.jpeg);"></div>
-<div class="text-center p-4">
-<span class="excerpt d-block" style="text-align: center;">Mr Dipto Barman</span>
-
-<a href="https://tiet.zoom.us/my/diptobarman" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
-</div>
-</div>
-</div>
-<div class="col-md-4 ftco-animate">
-<div class="block-7">
-<div class="img" style="background-image: url(images/dipto.jpeg);"></div>
-<div class="text-center p-4">
-<span class="excerpt d-block"style="text-align: center;">Mr Dipto Barman</span>
-
-<a href="https://tiet.zoom.us/my/diptobarman" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
- -->
       </div>
     </div>
     </div>
     </div>
     </div>
   </section>
-
-  <div style="padding-bottom:100px; margin-left:500px; margin-right:500px;">
-    <a href="http://lmtsom.thapar.edu/" target="_blank" class="btn btn-primary d-block px-2 py-3"><span
-        class="fa fa-home" style="padding: 10px;"></span>For More Info</a>
-
-  </div>
-  <div class="container" style="margin-top:100px;">
+  <div class="container" style="margin-top:50px;">
     <p style="font:250px; font-weight: bold;text-align: center;color:#640000">SCHEDULE</p>
     <table class="table">
       <thead class="thead-dark">
@@ -200,6 +160,8 @@
           <th scope="col" style="color:white">Time</th>
 
           <th scope="col" style="color:white">Faculty</th>
+          <th scope="col" style="color:white">Link</th>
+
 
 
         </tr>
@@ -211,14 +173,22 @@
 
 
           <td><span style="font-weight: bold;"> Dr. Sandeep Goyal</span>, PGP Head, MBA Program</td>
+          <td><a href="https://zoom.us/j/97726398272" target="_blank"
+            class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera"
+              style="padding: 10px;"></span>Connect With Us</a><br><br>
+        </td>
         </tr>
         <tr>
           <td>2</td>
           <th scope="row">10:30-11:30 AM</th>
 
 
-          <td><span style="font-weight: bold;"> Dr.KarminderGhuman</span>, Head, Venture Lab – TIET, Associate
-            Professor, Entrepreneurship and Marketing</td>
+          <td><span style="font-weight: bold;"> Dr. KarminderGhuman</span>, Head, Venture Lab – TIET, Associate
+            Professor,<br> Entrepreneurship and Marketing</td>
+            <td><a href="https://zoom.us/j/97726398272" target="_blank"
+              class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera"
+                style="padding: 10px;"></span>Connect With Us</a><br><br>
+          </td>
         </tr>
         <tr>
           <td>3</td>
@@ -226,6 +196,10 @@
 
 
           <td><span style="font-weight: bold;">Dr. Ankit Mahindroo</span>, Chair - Academic Operations</td>
+          <td><a href="https://zoom.us/j/97726398272" target="_blank"
+            class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera"
+              style="padding: 10px;"></span>Connect With Us</a><br><br>
+        </td>
         </tr>
         <tr>
           <td>4</td>
@@ -233,6 +207,10 @@
 
 
           <td><span style="font-weight: bold;">Mr. Ankush Arora</span>, Admissions Team</td>
+          <td><a href="https://zoom.us/j/97726398272" target="_blank"
+            class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera"
+              style="padding: 10px;"></span>Connect With Us</a><br><br>
+        </td>
         </tr>
 
 
@@ -240,6 +218,13 @@
       </tbody>
     </table>
   </div>
+
+  <div style="padding-bottom:100px; margin-left:500px; margin-right:500px;">
+    <a href="http://lmtsom.thapar.edu/" target="_blank" class="btn btn-primary d-block px-2 py-3"><span
+        class="fa fa-home" style="padding: 10px;"></span>For More Info</a>
+
+  </div>
+  
 
 
 
