--- a/tslas.html
+++ b/tslas.html
@@ -194,7 +194,8 @@
               <p style="text-align: center;">TSLAS</p>
               <p style="text-align: center;">Date & Time: 21 Sept 2020., 9:00 AM</p>
               <br>
-              <p style="text-align: justify;">The School of Liberal Arts & Sciences, is the School of New India. Keeping alive the legacy of its
+              <p style="text-align: justify;">The School of Liberal Arts & Sciences, is the School of New India. Keeping
+                alive the legacy of its
                 name, Thapar Institute of Engineering & Technology pioneers yet again to introduce the progressive
                 program of Liberal Arts & Sciences in Punjab. The forward-thinking philosophy and pedagogy of this
                 latest addition of teaching-learning opportunities created by TIET, presents students with prospects to
@@ -224,12 +225,13 @@
 
 
 
-              <a href="https://zoom.us/j/92636688969?pwd=Sk9CS1ZWZWgvaWpnTzRZakZER0IyQT09" target="_blank"
+              <!-- <a href="https://zoom.us/j/92636688969?pwd=Sk9CS1ZWZWgvaWpnTzRZakZER0IyQT09" target="_blank"
                 class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera"
-                  style="padding: 10px;"></span>Connect With Us</a>
+                  style="padding: 10px;"></span>Connect With Us</a> -->
             </div>
           </div>
         </div>
+
 
 
 
@@ -249,14 +251,7 @@
     </div>
     </div>
   </section>
-
-  <div style="padding-bottom:100px; margin-left:500px; margin-right:500px;">
-    <a href="http://tslas.thapar.edu/?_ga=2.167818209.1955838888.1600158014-952579136.1569080336" target="_blank"
-      class="btn btn-primary d-block px-2 py-3"><span class="fa fa-home" style="padding: 10px;"></span>For More Info</a>
-
-  </div>
-
-  <div class="container" style="margin-top:100px;">
+  <div class="container" style="margin-top:50px;">
     <p style="font:250px; font-weight: bold;text-align: center;color:#640000">SCHEDULE</p>
     <table class="table">
       <thead class="thead-dark">
@@ -266,6 +261,7 @@
           <th scope="col" style="color:white">Time</th>
 
           <th scope="col" style="color:white">Faculty</th>
+          <th scope="col" style="color:white">Link</th>
 
 
         </tr>
@@ -277,6 +273,10 @@
 
 
           <td>Dr. Nair</td>
+          <td><a href="https://zoom.us/j/92636688969?pwd=Sk9CS1ZWZWgvaWpnTzRZakZER0IyQT09" target="_blank"
+              class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera"
+                style="padding: 10px;"></span>Connect With Us</a><br><br>
+          </td>
         </tr>
         <tr>
           <td>2</td>
@@ -284,6 +284,10 @@
 
 
           <td>Prof. Neeti</td>
+          <td><a href="https://zoom.us/j/92636688969?pwd=Sk9CS1ZWZWgvaWpnTzRZakZER0IyQT09" target="_blank"
+              class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera"
+                style="padding: 10px;"></span>Connect With Us</a><br><br>
+          </td>
         </tr>
         <tr>
           <td>3</td>
@@ -291,6 +295,10 @@
 
 
           <td>Prof. Vinay</td>
+          <td><a href="https://zoom.us/j/92636688969?pwd=Sk9CS1ZWZWgvaWpnTzRZakZER0IyQT09" target="_blank"
+              class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera"
+                style="padding: 10px;"></span>Connect With Us</a><br><br>
+          </td>
         </tr>
         <tr>
           <td>4</td>
@@ -298,6 +306,10 @@
 
 
           <td>Prof. Timothy</td>
+          <td><a href="https://zoom.us/j/92636688969?pwd=Sk9CS1ZWZWgvaWpnTzRZakZER0IyQT09" target="_blank"
+              class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera"
+                style="padding: 10px;"></span>Connect With Us</a><br><br>
+          </td>
         </tr>
         <tr>
           <td>5</td>
@@ -305,6 +317,10 @@
 
 
           <td>Prof. Adil</td>
+          <td><a href="https://zoom.us/j/92636688969?pwd=Sk9CS1ZWZWgvaWpnTzRZakZER0IyQT09" target="_blank"
+              class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera"
+                style="padding: 10px;"></span>Connect With Us</a><br><br>
+          </td>
         </tr>
         <tr>
           <td>6</td>
@@ -312,6 +328,10 @@
 
 
           <td>Prof. Tejo</td>
+          <td><a href="https://zoom.us/j/92636688969?pwd=Sk9CS1ZWZWgvaWpnTzRZakZER0IyQT09" target="_blank"
+              class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera"
+                style="padding: 10px;"></span>Connect With Us</a><br><br>
+          </td>
         </tr>
         <tr>
           <td>7</td>
@@ -319,6 +339,10 @@
 
 
           <td>Prof. Ajit</td>
+          <td><a href="https://zoom.us/j/92636688969?pwd=Sk9CS1ZWZWgvaWpnTzRZakZER0IyQT09" target="_blank"
+              class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera"
+                style="padding: 10px;"></span>Connect With Us</a><br><br>
+          </td>
         </tr>
         <tr>
           <td>8</td>
@@ -326,6 +350,10 @@
 
 
           <td>Prof. Ipshita</td>
+          <td><a href="https://zoom.us/j/92636688969?pwd=Sk9CS1ZWZWgvaWpnTzRZakZER0IyQT09" target="_blank"
+              class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera"
+                style="padding: 10px;"></span>Connect With Us</a><br><br>
+          </td>
         </tr>
         <tr>
           <td>9</td>
@@ -333,6 +361,10 @@
 
 
           <td>Prof. Santha</td>
+          <td><a href="https://zoom.us/j/92636688969?pwd=Sk9CS1ZWZWgvaWpnTzRZakZER0IyQT09" target="_blank"
+              class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera"
+                style="padding: 10px;"></span>Connect With Us</a><br><br>
+          </td>
         </tr>
         <tr>
           <td>10</td>
@@ -340,6 +372,10 @@
 
 
           <td>Prof. Kaustuv</td>
+          <td><a href="https://zoom.us/j/92636688969?pwd=Sk9CS1ZWZWgvaWpnTzRZakZER0IyQT09" target="_blank"
+              class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera"
+                style="padding: 10px;"></span>Connect With Us</a><br><br>
+          </td>
         </tr>
         <tr>
           <td>11</td>
@@ -347,6 +383,10 @@
 
 
           <td>Prof. Byapti</td>
+          <td><a href="https://zoom.us/j/92636688969?pwd=Sk9CS1ZWZWgvaWpnTzRZakZER0IyQT09" target="_blank"
+              class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera"
+                style="padding: 10px;"></span>Connect With Us</a><br><br>
+          </td>
         </tr>
         <tr>
           <td>12</td>
@@ -354,6 +394,10 @@
 
 
           <td>Prof. Manmohan</td>
+          <td><a href="https://zoom.us/j/92636688969?pwd=Sk9CS1ZWZWgvaWpnTzRZakZER0IyQT09" target="_blank"
+              class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera"
+                style="padding: 10px;"></span>Connect With Us</a><br><br>
+          </td>
         </tr>
         <tr>
           <td>13</td>
@@ -361,6 +405,10 @@
 
 
           <td>Prof. Andrea</td>
+          <td><a href="https://zoom.us/j/92636688969?pwd=Sk9CS1ZWZWgvaWpnTzRZakZER0IyQT09" target="_blank"
+              class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera"
+                style="padding: 10px;"></span>Connect With Us</a><br><br>
+          </td>
         </tr>
         <tr>
           <td>14</td>
@@ -368,6 +416,10 @@
 
 
           <td>Prof. Neloy</td>
+          <td><a href="https://zoom.us/j/92636688969?pwd=Sk9CS1ZWZWgvaWpnTzRZakZER0IyQT09" target="_blank"
+              class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera"
+                style="padding: 10px;"></span>Connect With Us</a><br><br>
+          </td>
         </tr>
         <tr>
           <td>15</td>
@@ -375,6 +427,10 @@
 
 
           <td>Prof. Bhaskar</td>
+          <td><a href="https://zoom.us/j/92636688969?pwd=Sk9CS1ZWZWgvaWpnTzRZakZER0IyQT09" target="_blank"
+              class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera"
+                style="padding: 10px;"></span>Connect With Us</a><br><br>
+          </td>
         </tr>
         <tr>
           <td>16</td>
@@ -382,6 +438,10 @@
 
 
           <td>Prof. Satveer</td>
+          <td><a href="https://zoom.us/j/92636688969?pwd=Sk9CS1ZWZWgvaWpnTzRZakZER0IyQT09" target="_blank"
+              class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera"
+                style="padding: 10px;"></span>Connect With Us</a><br><br>
+          </td>
         </tr>
 
 
@@ -389,8 +449,11 @@
     </table>
   </div>
 
+  <div style="padding-bottom:100px; margin-left:500px; margin-right:500px;">
+    <a href="http://tslas.thapar.edu/?_ga=2.167818209.1955838888.1600158014-952579136.1569080336" target="_blank"
+      class="btn btn-primary d-block px-2 py-3"><span class="fa fa-home" style="padding: 10px;"></span>For More Info</a>
 
-
+  </div>
 
 
   <footer class="footer">
