--- a/humanities.html
+++ b/humanities.html
@@ -142,7 +142,7 @@
    margin-left: 200px;">
           <div class="block-7">
             <div class="img" style="background-image: url(images/ravikiran.jpg);height:550px;"></div>
-            <div class="text-center p-4" style="">
+            <div class="text-center p-4" >
               <span class="excerpt d-block" style="text-align: center;">School of
                 Humanities & Social Sciences</span>
               <p style="text-align: center;">Humanities</p>
