--- a/alumni.html
+++ b/alumni.html
@@ -67,12 +67,11 @@
               <h3>Ajay Khanna</h3>
               <span class="position mb-2">1994, Mechanical Engineer</span>
               <div class="faded">
-                <p>Vice president, marketing, Reltio. <br> Worked in organizations like Samtel, Honda Motors in India
-                  and Amdocs, Oracle, Veeva Systems in the US</p>
-                <p>Alumunus Santa Clara University</p>
+                <p style="text-align: justify;">Vice President, Marketing, Reltio.<br>Worked in organizations like Samtel, Honda Motors in India and Amdocs, Oracle, Veeva Systems in the US</p>
+                <p style="text-align: justify;">Alumunus Santa Clara University</p>
                 <p style="font-weight: bold;">DATE: 21 Sept,2020 </p>
                 <p style="font-weight: bold;">TIME: <span style="color:#640000">12:00-1:00 PM</span></p>
-                <br>
+                <br> 
                 <a href="https://tiet.zoom.us/j/97902085330?pwd=SWFDY3QyUHplOEF2N2R5MGc3VkczQT09" target="_blank"
                   class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera"
                     style="padding: 10px;"></span>Connect</a>
@@ -107,8 +106,8 @@
               <h3>Gauri Singh Shandilaya</h3>
               <span class="position mb-2">1994, Civil Engineer</span>
               <div class="faded">
-                <p>Entrepreneur and Managing Director Crystal Sanitary Fittings Pvt.Ltd.(ARK)</p>
-                <br><br><br><br><br><br>
+                <p style="text-align: justify;">Entrepreneur and Managing Director Crystal Sanitary Fittings Pvt.Ltd.(ARK)</p>
+                <br><br><br><br><br>
                 <p style="font-weight: bold;">DATE: 21 Sept,2020 </p>
                 <p style="font-weight: bold;">TIME:<span style="color:#640000"> 10:00-11:00 AM ; 3:00-4:00 PM </span>
                 </p>
@@ -138,7 +137,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-6 col-lg-3 ftco-animate">
+        <!-- <div class="col-md-6 col-lg-3 ftco-animate">
           <div class="staff">
             <div class="img-wrap d-flex align-items-stretch">
               <div class="img align-self-stretch" style="background-image: url(images/alumni/alumni_3.jpeg);"></div>
@@ -180,7 +179,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
         <div class="col-md-6 col-lg-3 ftco-animate">
           <div class="staff">
             <div class="img-wrap d-flex align-items-stretch">
@@ -190,8 +189,8 @@
               <h3>Manoj Malhotra</h3>
               <span class="position mb-2">1994, Civil Engineer </span>
               <div class="faded">
-                <p>Executive Engineer, DWSS, Punjab. Site Engineer, Siel Chemical Complex</p>
-                <p>ME Structures from PEC Chandigarh</p>
+                <p style="text-align: justify;">Executive Engineer, DWSS, Punjab. Site Engineer, Siel Chemical Complex</p>
+                <p style="text-align: justify;">ME Structures from PEC Chandigarh</p>
                 <br><br><br>
                 <p style="font-weight: bold;">DATE: 21 Sept,2020 </p>
                 <p style="font-weight: bold;">TIME: <span style="color:#640000"> 11:00-12:00 PM; 3:00-4:00 PM </span>
@@ -230,10 +229,9 @@
               <h3>Jyotsna Gupta Saxena </h3>
               <span class="position mb-2">1994, Electronics (Instrumentation and Control) Engineer</span>
               <div class="faded">
-                <p>
-                  Current designation: Self-employed
-                  Past designations and organizations: MT at EIL, AM at Punwire, TL at NIIT Ltd</p>
-                <br>
+                <p style="text-align: justify;">
+                  Current designation: <br>Self-Employed<br>Past designations and organizations: MT at EIL, AM at Punwire, TL at NIIT Ltd</p>
+                <br><br>
                 <p style="font-weight: bold;">DATE: 21 Sept,2020 </p>
                 <p style="font-weight: bold;">TIME: <span style="color:#640000"> 11:00-12:00 PM ; 2:00-3:00 PM </span>
                 </p>
@@ -262,7 +260,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-6 col-lg-3 ftco-animate">
+        <!-- <div class="col-md-6 col-lg-3 ftco-animate">
           <div class="staff">
             <div class="img-wrap d-flex align-items-stretch">
               <div class="img align-self-stretch" style="background-image: url(images/alumni/alumni_6.jpeg);"></div>
@@ -305,8 +303,8 @@
               </div>
             </div>
           </div>
-        </div>
-        <div class="col-md-6 col-lg-3 ftco-animate">
+        </div> -->
+        <!-- <div class="col-md-6 col-lg-3 ftco-animate">
           <div class="staff">
             <div class="img-wrap d-flex align-items-stretch">
               <div class="img align-self-stretch" style="background-image: url(images/alumni/alumni_7.jpeg);"></div>
@@ -346,7 +344,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
         <div class="col-md-6 col-lg-3 ftco-animate">
           <div class="staff">
             <div class="img-wrap d-flex align-items-stretch">
@@ -356,10 +354,9 @@
               <h3>Rachna Mahajan</h3>
               <span class="position mb-2">1994, Electronics and Electrical Communication </span>
               <div class="faded">
-                <p>Director , Product and Technology Programs
-                  Workday <br>worked at
-                  Salesforce , Cisco, Sun Microsystems, Silicon Graphics , CMC Ltd</p>
-                <br>
+                <p style="text-align: justify;">Director, Product and Technology Programs
+                  Workday, worked at Salesforce, Cisco, Sun Microsystems, Silicon Graphics, CMC Ltd</p>
+                <br><br><br><br>
                 <p style="font-weight: bold;">DATE: 21 Sept,2020 </p>
                 <p style="font-weight: bold;">TIME: <span style="color:#640000"> 10:00-11:00 AM; 12:00-1:00 PM;2:00-3:00
                     PM </span> </p>
@@ -398,9 +395,9 @@
               <span class="position mb-2">1994, Mechanical Engineer</span>
 
               <div class="faded">
-                <p>Director of Sales and Marketing, Great Wall Motor</p>
-                <p>Alumnus Harvard Business School</p>
-                <br><br><br><br><br>
+                <p >Director of Sales and Marketing, Great Wall Motor</p>
+                <p style="text-align: justify;">Alumnus Harvard Business School</p>
+                <br><br><br><br><br><br>
 
                 <p style="font-weight: bold;">DATE: 21 Sept,2020 </p>
                 <p style="font-weight: bold;">TIME: <span style="color:#640000"> 10:00-11:00 AM; 4:00-5:00 PM </span>
@@ -445,7 +442,7 @@
 
               </span>
               <div class="faded">
-                <p>Former Chairman and Managing Director (Mazagon Dock Shipbuilders Limited)</p>
+                <p style="text-align: justify;">Former Chairman and Managing Director (Mazagon Dock Shipbuilders Limited)</p>
 
 
                 <p style="font-weight: bold;">DATE: 21 Sept,2020 </p>
@@ -486,9 +483,9 @@
               <span class="position mb-2">1980, Electronics and Communication Engineer</span>
 
               <div class="faded">
-                <p> Liaison Officer to Amrita Vishwa Vidyapeetham University </p>
-                <p>Had served 36 Years in Indian Navy </p>
-                <br><br><br>
+                <p style="text-align: justify;"> Liaison Officer to Amrita Vishwa Vidyapeetham University </p>
+                <p style="text-align: justify;">Had served 36 Years in Indian Navy </p>
+                <br><br><br> <br>
 
                 <p style="font-weight: bold;">DATE: 21 Sept,2020 </p>
                 <p style="font-weight: bold;">TIME: <span style="color:#640000"> </span> </p>
@@ -528,9 +525,9 @@
               <span class="position mb-2">1972, Electrical Engineer</span>
 
               <div class="faded">
-                <p>Distinguished Scientist (Retired from BARC after 42 years of service)</p>
-                <p>Had been a Fellow, Indian National Academy of engineers and President Robotics Society of India</p>
-                <br><br>
+                <p style="text-align: justify;">Distinguished Scientist (Retired from BARC after 42 years of service)</p>
+                <p style="text-align: justify;">Had been a Fellow, Indian National Academy of engineers and President Robotics Society of India</p>
+                <br><br><br><br><br><br><br><br><br><br>
 
                 <p style="font-weight: bold;">DATE: 21 Sept,2020 </p>
                 <p style="font-weight: bold;">TIME: <span style="color:#640000"> 10:00-11:00 AM;2:00-3:00 PM </span>
@@ -571,7 +568,7 @@
               <span class="position mb-2">1981, Mechanical Engineer</span>
 
               <div class="faded">
-                <p>Sr Executive Director (HR & IT) at Maruti Suzuki India Limited. A total of 39 years of experience
+                <p style="text-align: justify;">Sr Executive Director (HR & IT) at Maruti Suzuki India Limited. A total of 39 years of experience
                   <br> Had worked at BHEL</p>
                 <br><br><br><br><br><br><br><br><br><br><br><br><br>
 
@@ -614,7 +611,7 @@
               <span class="position mb-2">1970, Mechanical Engineer</span>
 
               <div class="faded">
-                <p> Trained in the then USSR on MiG-29 aircraft.
+                <p style="text-align: justify;"> Trained in the then USSR on MiG-29 aircraft.
                   Visiting Professor in 5 Engg collages and 2 MBA institutes.
                   Corporate trainer on Quality aspects.
                   Published more than 100 articles in national newspapers/ magazines.
@@ -660,7 +657,7 @@
               <h3>Param Thind</h3>
               <span class="position mb-2">1994, Mechanical Engineer</span>
               <div class="faded">
-                <p>Director, Global Transaction Services
+                <p style="text-align: justify;">Director, Global Transaction Services
                   Bank of America, Hong Kong
                   Deutsche Bank</p>
                 <p>Alumnus IIM Bangalore</p>
@@ -703,9 +700,9 @@
               <h3>Gagan Gupta</h3>
               <span class="position mb-2">1994, Civil Engineer</span>
               <div class="faded">
-                <p>Dy Director Technical,CGEWHO MoHousing and Urban Affairs,Working for past 22 years</p>
+                <p style="text-align: justify;">Dy Director Technical, CGEWHO MoHousing and Urban Affairs,Working for past 22 years</p>
 
-                <br><br><br><br><br><br><br><br><br><br><br><br><br>
+                <br><br><br><br><br><br><br><br>
                 <p style="font-weight: bold;">DATE: 21 Sept,2020 </p>
                 <p style="font-weight: bold;">TIME: <span style="color:#640000"> 3:00-4:00 PM </span> </p>
                 <a href="https://tiet.zoom.us/j/97902085330?pwd=SWFDY3QyUHplOEF2N2R5MGc3VkczQT09" target="_blank"
@@ -743,9 +740,9 @@
               <h3>Ish Ahuja</h3>
               <span class="position mb-2">2007, Civil Engineer</span>
               <div class="faded">
-                <p>Project Controls Manager - NSW/ACT - National Infrastructure Team (John Holland)</p><br><br>
-                <p>Had worked in Cushman & Wakefield, Laing O’Rourke, Acciona</p>
-                <br><br><br>
+                <p style="text-align: justify;">Project Controls Manager - NSW/ACT - National Infrastructure Team (John Holland)</p><br>
+                <p style="text-align: justify;">Had worked in Cushman & Wakefield, Laing O’Rourke, Acciona</p>
+                <br><br><br><br>
                 <p style="font-weight: bold;">DATE: 21 Sept,2020 </p>
                 <p style="font-weight: bold;">TIME: <span style="color:#640000"> 3:00-4:00 PM </span> </p>
                 <a href="https://tiet.zoom.us/j/97902085330?pwd=SWFDY3QyUHplOEF2N2R5MGc3VkczQT09" target="_blank"
