--- a/lmtsm.html
+++ b/lmtsm.html
@@ -83,7 +83,7 @@
    margin-left: 200px;">
           <div class="block-7">
             <div class="img" style="background-image: url(images/dirMBA.jpg);height:700px;"></div>
-            <div class="text-center p-4" style="">
+            <div class="text-center p-4">
               <span class="excerpt d-block" style="text-align: center;">LM Thapar School of Management
               </span>
               <p style="text-align: center;">LMTSM</p>
