--- a/tslas.html
+++ b/tslas.html
@@ -189,7 +189,7 @@
    margin-left: 200px;">
           <div class="block-7">
             <div class="img" style="background-image: url(images/drnair.jpg);height:600px;"></div>
-            <div class="text-center p-4" style="">
+            <div class="text-center p-4" >
               <span class="excerpt d-block" style="text-align: center;">Thapar School of Liberal Arts & Sciences</span>
               <p style="text-align: center;">TSLAS</p>
               <p style="text-align: center;">Date & Time: 21 Sept 2020., 9:00 AM</p>
