--- a/csed.html
+++ b/csed.html
@@ -81,7 +81,7 @@
 </p>
 
 
-<!-- <a href="https://tiet.zoom.us/my/msingh/"  target="_blank" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect With Us</a>
+<!-- <a href="https://tiet.zoom.us/my/csmeetings/"  target="_blank" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect With Us</a>
  --></div>
 </div>
 </div>
@@ -120,7 +120,7 @@
           Dr. Inderveer Channa<br>
   </td>
   
-  <td><a href="https://tiet.zoom.us/my/msingh"  target="_blank" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect With Us</a><br><br>
+  <td><a href="https://tiet.zoom.us/my/csmeetings"  target="_blank" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect With Us</a><br><br>
   
         
   <!-- Meeting ID: 924 5459 6107<br>
@@ -141,7 +141,7 @@
           Dr. Neeraj Kumar<br>
           Dr. Inderveer Channa<br>
   </td>
-  <td><a href="https://tiet.zoom.us/my/msingh"  target="_blank" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect With Us</a><br><br>
+  <td><a href="https://tiet.zoom.us/my/csmeetings"  target="_blank" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect With Us</a><br><br>
   
   
   <!-- Meeting ID: 934 1293 8513<br>
@@ -163,7 +163,7 @@
           Dr. Inderveer Channa<br>
   
   </td>
-  <td><a href="https://tiet.zoom.us/my/msingh"  target="_blank" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect With Us</a><br><br>
+  <td><a href="https://tiet.zoom.us/my/csmeetings"  target="_blank" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect With Us</a><br><br>
   
         
   
