--- a/electrical.html
+++ b/electrical.html
@@ -189,7 +189,7 @@
    margin-left: 200px;">
 <div class="block-7">
 <div class="img" style="background-image: url(images/EIC.JPG);height:450px;"></div>
-<div class="text-center p-4" style=" ">
+<div class="text-center p-4" >
 <span class="excerpt d-block"style="text-align: center;">Electrical & Instrumentation</span>
 <p style="text-align: center;">ELE & EIC</p>
 <p style="text-align: center;">Date & Time: 21 Sept 2020, 9:00 AM</p>
