--- a/alumni.html
+++ b/alumni.html
@@ -396,8 +396,8 @@
 
               <div class="faded">
                 <p >Director of Sales and Marketing, Great Wall Motor</p>
-                <p style="text-align: justify;">Alumnus Harvard Business School</p>
-                <br><br><br><br><br><br>
+                <p style="text-align: justify;">Alumnus Harvard Business School, worked at Nissan, Volkswagen, General Motors & Maruti  </p>
+                <br><br><br><br>
 
                 <p style="font-weight: bold;">DATE: 21 Sept,2020 </p>
                 <p style="font-weight: bold;">TIME: <span style="color:#640000"> 10:00-11:00 AM; 4:00-5:00 PM </span>
