--- a/alumni.html
+++ b/alumni.html
@@ -70,7 +70,7 @@
                 <p style="text-align: justify;">Vice President, Marketing, Reltio.<br>Worked in organizations like Samtel, Honda Motors in India and Amdocs, Oracle, Veeva Systems in the US</p>
                 <p style="text-align: justify;">Alumunus Santa Clara University</p>
                 <p style="font-weight: bold;">DATE: 21 Sept,2020 </p>
-                <p style="font-weight: bold;">TIME: <span style="color:#640000">12:00-1:00 PM</span></p>
+                <p style="font-weight: bold;">TIME: <span style="color:#640000">11:00-12:00 Noon</span></p>
                 <br> 
                 <a href="https://tiet.zoom.us/j/97902085330?pwd=SWFDY3QyUHplOEF2N2R5MGc3VkczQT09" target="_blank"
                   class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera"
