--- a/chemical.html
+++ b/chemical.html
@@ -81,7 +81,7 @@
             <div class="text-center p-4">
               <span class="excerpt d-block" style="text-align: center;">Chemical Engineering</span>
               <p style="text-align: center;">CHED</p>
-              <p style="text-align: center;">Date & Time: 21 sept., 9:00 AM</p>
+              <p style="text-align: center;">Date & Time: 21 Sept 2020, 10:00 AM</p>
               <br>
               <p style="text-align: justify;">The program offers courses which have a mix of theoretical and practical
                 aspects through classroom teaching and projects, field interactions and industrial training, capstone
