--- a/civil.html
+++ b/civil.html
@@ -88,7 +88,7 @@
 <div class="text-center p-4">
 <span class="excerpt d-block"style="text-align: center;">Civil Engineering</span>
 <p style="text-align: center;">CED</p>
-<p style="text-align: center;">Date & Time: 21 sept., 9:00 AM</p>
+<p style="text-align: center;">Date & Time: 21 Sept 2020, 9:00 AM</p>
 <br>
 <p style="text-align: justify;">We prepare our students to conceptualize, plan, design, construct and implement facilities meant for catering societal needs for today and tomorrow, and that is how students understand what civil engineering is all about.In BE Civil Engineering, Department offers three focus areas namely: Structural Engineering and Sustainable Materials, Smart cities, Infrastructure Development and Management. Our undergraduate curriculum is a perfect balance between theoretical requirements and practical aspects of not just the broad disciplines of civil engineering such as structure, surveying, geotechnical, transportation, and water resources engineering but also provides the management and entrepreneurial scope in its coverage. Our faculty has fundamental competencies to teach in all the above fields along with the support of our dedicated staff members.
 
