--- a/eced.html
+++ b/eced.html
@@ -75,7 +75,7 @@
 <div class="text-center p-4">
 <span class="excerpt d-block"style="text-align: center;">Electronics and Communication Engineering</span>
 <p style="text-align: center;">ECED</p>
-<p style="text-align: center;">Date & Time: 21 sept., 9:00 AM</p>
+<p style="text-align: center;">Date & Time: 21 Sept 2020, 10:00 AM</p>
 <br>
 <p style="text-align: justify;">Our aim is to educate the brilliant youth towards world-class education and to enable them to contribute to the development of our society. The responsibilities and dedications of our teachers lead the ECE Department towards an outstanding learning environment, where the state-of-the-art laboratories, libraries, access to knowledge resources, extracurricular activities all are present.Our department offers science-based engineering curriculum. The primary focus of our curriculum is to impart technical know-how to students, promote their problem solving skills and innovation of new technologies. Department offers large number of optional courses for providing wide spectrum of options to the students to pursue their interest. The department has strong industry and government research organisations connect to abreast the students with the new scientific and technological developments.  Undergraduate students are also encouraged to undertake various research projects.
 
