--- a/alumni.html
+++ b/alumni.html
@@ -193,7 +193,7 @@
                 <p style="text-align: justify;">ME Structures from PEC Chandigarh</p>
                 <br><br><br>
                 <p style="font-weight: bold;">DATE: 21 Sept,2020 </p>
-                <p style="font-weight: bold;">TIME: <span style="color:#640000"> 11:00-12:00 PM; 3:00-4:00 PM </span>
+                <p style="font-weight: bold;">TIME: <span style="color:#640000">3:00-4:00 PM </span>
                 </p>
                 <a href="https://tiet.zoom.us/j/97902085330?pwd=SWFDY3QyUHplOEF2N2R5MGc3VkczQT09" target="_blank"
                   class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera"
@@ -233,7 +233,7 @@
                   Current designation: <br>Self-Employed<br>Past designations and organizations: MT at EIL, AM at Punwire, TL at NIIT Ltd</p>
                 <br><br>
                 <p style="font-weight: bold;">DATE: 21 Sept,2020 </p>
-                <p style="font-weight: bold;">TIME: <span style="color:#640000"> 11:00-12:00 PM ; 2:00-3:00 PM </span>
+                <p style="font-weight: bold;">TIME: <span style="color:#640000"> 11:00-12:00 Noon ; 2:00-3:00 PM </span>
                 </p>
                 <a href="https://tiet.zoom.us/j/97902085330?pwd=SWFDY3QyUHplOEF2N2R5MGc3VkczQT09" target="_blank"
                   class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera"
@@ -358,8 +358,7 @@
                   Workday, worked at Salesforce, Cisco, Sun Microsystems, Silicon Graphics, CMC Ltd</p>
                 <br><br><br><br>
                 <p style="font-weight: bold;">DATE: 21 Sept,2020 </p>
-                <p style="font-weight: bold;">TIME: <span style="color:#640000"> 10:00-11:00 AM; 12:00-1:00 PM;2:00-3:00
-                    PM </span> </p>
+                <p style="font-weight: bold;">TIME: <span style="color:#640000"> 10:00-11:00 AM; 12:00-1:00 PM </span> </p>
                 <a href="https://tiet.zoom.us/j/97902085330?pwd=SWFDY3QyUHplOEF2N2R5MGc3VkczQT09" target="_blank"
                   class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera"
                     style="padding: 10px;"></span>Connect</a>
@@ -400,7 +399,7 @@
                 <br><br><br><br>
 
                 <p style="font-weight: bold;">DATE: 21 Sept,2020 </p>
-                <p style="font-weight: bold;">TIME: <span style="color:#640000"> 10:00-11:00 AM; 4:00-5:00 PM </span>
+                <p style="font-weight: bold;">TIME: <span style="color:#640000">4:00-5:00 PM </span>
                 </p>
                 <a href="https://tiet.zoom.us/j/97902085330?pwd=SWFDY3QyUHplOEF2N2R5MGc3VkczQT09" target="_blank"
                   class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera"
@@ -530,7 +529,7 @@
                 <br><br><br><br><br><br><br><br><br><br>
 
                 <p style="font-weight: bold;">DATE: 21 Sept,2020 </p>
-                <p style="font-weight: bold;">TIME: <span style="color:#640000"> 10:00-11:00 AM;2:00-3:00 PM </span>
+                <p style="font-weight: bold;">TIME: <span style="color:#640000"> 10:00-11:00 AM </span>
                 </p>
                 <a href="https://tiet.zoom.us/j/97902085330?pwd=SWFDY3QyUHplOEF2N2R5MGc3VkczQT09" target="_blank"
                   class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera"
@@ -621,7 +620,7 @@
                 <p>Alumnus ME (Aero) from IISc, Bangalore</p>
 
                 <p style="font-weight: bold;">DATE: 21 Sept,2020 </p>
-                <p style="font-weight: bold;">TIME: <span style="color:#640000"> 1:00-2:00 PM </span> </p>
+                <p style="font-weight: bold;">TIME: <span style="color:#640000"> 11:00-12:00 Noon; 1:00-2:00 PM </span> </p>
                 <a href="https://tiet.zoom.us/j/97902085330?pwd=SWFDY3QyUHplOEF2N2R5MGc3VkczQT09" target="_blank"
                   class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera"
                     style="padding: 10px;"></span>Connect</a>
