--- a/alumni.html
+++ b/alumni.html
@@ -191,7 +191,7 @@
               <div class="faded">
                 <p style="text-align: justify;">Executive Engineer, DWSS, Punjab. Site Engineer, Siel Chemical Complex</p>
                 <p style="text-align: justify;">ME Structures from PEC Chandigarh</p>
-                <br><br><br>
+                <br><br><br><br>
                 <p style="font-weight: bold;">DATE: 21 Sept,2020 </p>
                 <p style="font-weight: bold;">TIME: <span style="color:#640000">3:00-4:00 PM </span>
                 </p>
@@ -396,7 +396,7 @@
               <div class="faded">
                 <p >Director of Sales and Marketing, Great Wall Motor</p>
                 <p style="text-align: justify;">Alumnus Harvard Business School, worked at Nissan, Volkswagen, General Motors & Maruti  </p>
-                <br><br><br><br>
+                <br><br><br><br><br>
 
                 <p style="font-weight: bold;">DATE: 21 Sept,2020 </p>
                 <p style="font-weight: bold;">TIME: <span style="color:#640000">4:00-5:00 PM </span>
@@ -487,7 +487,7 @@
                 <br><br><br> <br>
 
                 <p style="font-weight: bold;">DATE: 21 Sept,2020 </p>
-                <p style="font-weight: bold;">TIME: 10:00 - 11:00 AM <span style="color:#640000"> </span> </p>
+                <p style="font-weight: bold;">TIME:<span style="color:#640000"> 10:00 - 11:00 AM</span> </p>
                 <a href="https://tiet.zoom.us/j/97902085330?pwd=SWFDY3QyUHplOEF2N2R5MGc3VkczQT09" target="_blank"
                   class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera"
                     style="padding: 10px;"></span>Connect</a>
@@ -526,7 +526,7 @@
               <div class="faded">
                 <p style="text-align: justify;">Distinguished Scientist (Retired from BARC after 42 years of service)</p>
                 <p style="text-align: justify;">Had been a Fellow, Indian National Academy of engineers and President Robotics Society of India</p>
-                <br><br><br><br><br><br><br><br><br><br>
+                <br><br><br><br><br><br><br><br><br><br><br><br>
 
                 <p style="font-weight: bold;">DATE: 21 Sept,2020 </p>
                 <p style="font-weight: bold;">TIME: <span style="color:#640000"> 10:00-11:00 AM </span>
@@ -741,7 +741,7 @@
               <div class="faded">
                 <p style="text-align: justify;">Project Controls Manager - NSW/ACT - National Infrastructure Team (John Holland)</p><br>
                 <p style="text-align: justify;">Had worked in Cushman & Wakefield, Laing O’Rourke, Acciona</p>
-                <br><br><br><br>
+                <br><br><br>
                 <p style="font-weight: bold;">DATE: 21 Sept,2020 </p>
                 <p style="font-weight: bold;">TIME: <span style="color:#640000"> 3:00-4:00 PM </span> </p>
                 <a href="https://tiet.zoom.us/j/97902085330?pwd=SWFDY3QyUHplOEF2N2R5MGc3VkczQT09" target="_blank"
