--- a/alumni.html
+++ b/alumni.html
@@ -478,7 +478,7 @@
               <div class="img align-self-stretch" style="background-image: url(images/alumni/capt.jpg);"></div>
             </div>
             <div class="text pt-3 px-3 pb-4 text-center">
-              <h3>Capt Rajiv Sood, veteran</h3>
+              <h3>Capt Rajiv Sood, Veteran</h3>
               <span class="position mb-2">1980, Electronics and Communication Engineering</span>
 
               <div class="faded">
