--- a/alumni.html
+++ b/alumni.html
@@ -799,7 +799,7 @@
             Meeting ID: 979 0208 5330<br>
             Passcode: 932714
           </td>
-          <td>Mansi Bhargava </td>
+          <td>Mansi</td>
         </tr>
         <tr>
           <th scope="row">11:00-12:00 PM</th>
@@ -812,7 +812,7 @@
             Meeting ID: 979 0208 5330<br>
             Passcode: 932714
           </td>
-          <td>Mansi Bhargava</td>
+          <td>Mansi</td>
         </tr>
         <tr>
           <th scope="row">12:00-1:00 PM</th>
@@ -825,7 +825,7 @@
           Meeting ID: 979 0208 5330<br>
           Passcode: 932714
         </td>
-          <td>Mansi Bhargava</td>
+          <td>Mansi</td>
         </tr>
         <tr>
           <th scope="row">1:00-2:00 PM</th>
@@ -838,7 +838,7 @@
             Meeting ID: 979 0208 5330<br>
             Passcode: 932714
           </td>
-          <td>Mansi Bhargava</td>
+          <td>Mansi</td>
         </tr>
         <tr>
           <th scope="row">2:00-3:00 PM</th>
@@ -851,7 +851,7 @@
             Meeting ID: 979 0208 5330<br>
             Passcode: 932714
           </td>
-          <td>Mansi Bhargava</td>
+          <td>Mansi</td>
         </tr>
         <tr>
           <th scope="row">3:00-4:00 PM</th>
@@ -864,7 +864,7 @@
             Meeting ID: 979 0208 5330<br>
             Passcode: 932714
           </td>
-          <td>Mansi Bhargava</td>
+          <td>Mansi</td>
         </tr>
         <tr>
           <th scope="row">4:00-5:00 PM</th>
@@ -877,7 +877,7 @@
             Meeting ID: 979 0208 5330<br>
             Passcode: 932714
           </td>
-          <td>Mansi Bhargava</td>
+          <td>Mansi</td>
         </tr>
       </tbody>
     </table>
