--- a/alumni.html
+++ b/alumni.html
@@ -356,7 +356,7 @@
               <div class="faded">
                 <p style="text-align: justify;">Director, Product and Technology Programs
                   Workday, worked at Salesforce, Cisco, Sun Microsystems, Silicon Graphics, CMC Ltd</p>
-                <br><br><br><br>
+                <br><br><br><br><br>
                 <p style="font-weight: bold;">DATE: 21 Sept,2020 </p>
                 <p style="font-weight: bold;">TIME: <span style="color:#640000"> 10:00-11:00 AM; 12:00-1:00 PM </span> </p>
                 <a href="https://tiet.zoom.us/j/97902085330?pwd=SWFDY3QyUHplOEF2N2R5MGc3VkczQT09" target="_blank"
@@ -396,7 +396,7 @@
               <div class="faded">
                 <p >Director of Sales and Marketing, Great Wall Motor</p>
                 <p style="text-align: justify;">Alumnus Harvard Business School, worked at Nissan, Volkswagen, General Motors & Maruti  </p>
-                <br><br><br><br><br>
+                <br><br><br><br><br><br>
 
                 <p style="font-weight: bold;">DATE: 21 Sept,2020 </p>
                 <p style="font-weight: bold;">TIME: <span style="color:#640000">4:00-5:00 PM </span>
@@ -434,12 +434,13 @@
             </div>
             <div class="text pt-3 px-3 pb-4 text-center">
               <h3>Rakesh Anand</h3>
-              <span class="position mb-2">1980, Mechanical Engineering<br>MTech (Material Sc) IIT Bom<br> MMS (Osmania
+              <span class="position mb-2">1980, Mechanical Engineering</span>
+              <p style="text-align: justify;">MTech (Material Sc) IIT Bom<br> MMS (Osmania
                 University)<br>PG Diploma Marine Hydraulics Erstwhile USSR
                 <br>Hold Chief Engineer tickets from DG Shipping
-                <br>Marine Engineer Specialisation Course from INS Shivaji
+                <br>Marine Engineer Specialisation Course from INS Shivaji</p>
 
-              </span>
+              
               <div class="faded">
                 <p style="text-align: justify;">Former Chairman and Managing Director (Mazagon Dock Shipbuilders Limited)</p>
 
@@ -484,7 +485,7 @@
               <div class="faded">
                 <p style="text-align: justify;"> Liaison Officer to Amrita Vishwa Vidyapeetham University </p>
                 <p style="text-align: justify;">Had served 36 Years in Indian Navy </p>
-                <br><br><br> <br>
+                <br><br><br> <br><br>
 
                 <p style="font-weight: bold;">DATE: 21 Sept,2020 </p>
                 <p style="font-weight: bold;">TIME:<span style="color:#640000"> 10:00 - 11:00 AM</span> </p>
