--- a/home.html
+++ b/home.html
@@ -143,7 +143,7 @@
           </video>
         </div>
 
-        <div class="col-md-3 d-flex align-self-stretch px-4 ftco-animate">
+        <div class="col-md-4 d-flex align-self-stretch px-4 ftco-animate">
           <div class="d-block services text-center">
             <div class="icon d-flex align-items-center justify-content-center">
               <img src="images/explore1.png" style="width:80%;">
@@ -161,7 +161,7 @@
           </div>
         </div>
 
-        <div class="col-md-3 d-flex align-self-stretch px-4 ftco-animate">
+        <div class="col-md-4 d-flex align-self-stretch px-4 ftco-animate">
           <div class="d-block services  text-center">
             <div class="icon d-flex align-items-center justify-content-center">
               <img src="images/es.png" style="width:130%;">
@@ -177,7 +177,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3 d-flex align-self-stretch px-4 ftco-animate">
+        <div class="col-md-4 d-flex align-self-stretch px-4 ftco-animate">
           <div class="d-block services text-center">
             <div class="icon d-flex align-items-center justify-content-center">
               <img src="images/alumni.png" style="width:110%;">
@@ -194,15 +194,15 @@
         </div>
         
 
-        <div class="col-md-3 d-flex align-self-stretch px-4 ftco-animate">
+        <!-- <div class="col-md-3 d-flex align-self-stretch px-4 ftco-animate">
           <div class="d-block services text-center">
             <div class="icon d-flex align-items-center justify-content-center">
               <img src="images/help.png" style="width:140%;">
             </div>
             <div class="media-body">
               <h3 class="heading">Industry Engagement and Placements Cell</h3>
-              <!--<p style="font-weight: bold;">Know more about data-placement at Thapar</p>
-             <p>Have any doubts regarding the placements?</p> -->
+              <p style="font-weight: bold;">Know more about data-placement at Thapar</p>
+             <p>Have any doubts regarding the placements?</p> 
               <p><a href="placement.html" class="btn btn-primary mr-md-4 py-3 px-4" style="margin-top: 70px;margin-left: 10px;">Contact Placements<span
                     class="ion-ios-arrow-forward"></span></a></p>
               <a href="placement.html" class="btn-custom d-flex align-items-center justify-content-center"><span
@@ -210,7 +210,7 @@
             </div>
           </div>
         </div>
-
+ -->
       </div>
     </div>
   </section>
@@ -354,6 +354,24 @@
             </div>
           </div>
         </div>
+
+        <div class="col-md-4 d-flex align-self-stretch px-4 ftco-animate">
+          <div class="d-block services text-center">
+            <div class="icon d-flex align-items-center justify-content-center">
+              <img src="images/help.png" style="width:140%;">
+            </div>
+            <div class="media-body">
+              <h3 class="heading">Industry Engagement and Placements Cell</h3>
+              <!--<p style="font-weight: bold;">Know more about data-placement at Thapar</p>
+             <p>Have any doubts regarding the placements?</p> -->
+              <p><a href="placement.html" class="btn btn-primary mr-md-4 py-3 px-4" style="margin-top: 70px;margin-left: 10px;">Contact Placements<span
+                    class="ion-ios-arrow-forward"></span></a></p>
+              <a href="placement.html" class="btn-custom d-flex align-items-center justify-content-center"><span
+                  class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
+            </div>
+          </div>
+        </div>
+
       </div>
     </div>
   </section>
