--- a/home.html
+++ b/home.html
@@ -169,7 +169,7 @@
             <div class="media-body">
               <h3 class="heading">Engineering Streams</h3>
               <p style="font-weight: bold;">Various Engineering Departments of TIET</p>
-              <p><a href="streams.html" class="btn btn-primary mr-md-4 py-3 px-4" style="margin-top: 60px;margin-left:  10px;">Engineering Streams<span
+              <p><a href="streams.html" class="btn btn-primary mr-md-4 py-3 px-4" style="margin-top: 60px;margin-left:  8px;">Engineering Streams<span
                     class="ion-ios-arrow-forward"></span></a></p>
               <a href="streams.html" class="btn-custom d-flex align-items-center justify-content-center"><span
                   class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
@@ -185,7 +185,7 @@
             <div class="media-body">
               <h3 class="heading">Thapar Alumni</h3>
               <p style="font-weight: bold;">ATTEND SESSIONS BY OUR ALUMNI</p>
-              <p><a href="alumni.html" class="btn btn-primary mr-md-3 py-3 px-4" style="margin-top:90px;">Sessions by
+              <p><a href="alumni.html" class="btn btn-primary mr-md-3 py-3 px-4" style="margin-top:60px;margin-left: 20px;">Sessions by
                   Alumni <span class="ion-ios-arrow-forward"></span></a></p>
               <a href="alumni.html" class="btn-custom d-flex align-items-center justify-content-center"><span
                   class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
