--- a/home.html
+++ b/home.html
@@ -148,12 +148,12 @@
             <div class="icon d-flex align-items-center justify-content-center">
               <img src="images/explore1.png" style="width:80%;">
             </div>
-            <div class="media-body">
+            <div class="media-body" style="text-align: center;">
               <h3 class="heading">Explore Thapar</h3>
               <p style="font-weight: bold;">INTRODUCTORY VIDEO</p>
               <p></p>
               <p><a href="#" onclick="lightbox_open();" class="btn btn-primary mr-md-4 py-3 px-4"
-                  style="margin-top: 90px;margin-left: 55px;">Watch
+                  style="margin-top: 90px;margin-left: 30px;">Watch
                   Video<span class="ion-ios-arrow-forward"></span></a></p>
               <a href="gallery.html" class="btn-custom d-flex align-items-center justify-content-center"><span
                   class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
