text-align: center

--- a/home.html
+++ b/home.html
@@ -166,7 +166,7 @@
             <div class="icon d-flex align-items-center justify-content-center">
               <img src="images/es.png" style="width:130%;">
             </div>
-            <div class="media-body">
+            <div class="media-body" style="text-align: center;">
               <h3 class="heading">Engineering Streams</h3>
               <p style="font-weight: bold;">Various Engineering Departments of TIET</p>
               <p><a href="streams.html" class="btn btn-primary mr-md-4 py-3 px-4" style="margin-top: 60px;margin-left:  8px;">Engineering Streams<span
