--- a/home.html
+++ b/home.html
@@ -182,7 +182,7 @@
             <div class="icon d-flex align-items-center justify-content-center">
               <img src="images/alumni.png" style="width:110%;">
             </div>
-            <div class="media-body">
+            <div class="media-body" style="text-align: center;">
               <h3 class="heading">Thapar Alumni</h3>
               <p style="font-weight: bold;">ATTEND SESSIONS BY OUR ALUMNI</p>
               <p><a href="alumni.html" class="btn btn-primary mr-md-3 py-3 px-4" style="margin-top:60px;margin-left: 20px;">Sessions by
