--- a/home.html
+++ b/home.html
@@ -360,7 +360,7 @@
             <div class="icon d-flex align-items-center justify-content-center">
               <img src="images/help.png" style="width:140%;">
             </div>
-            <div class="media-body">
+            <div class="media-body" style="text-align: center;">
               <h3 class="heading">Industry Engagement and Placements Cell</h3>
               <!--<p style="font-weight: bold;">Know more about data-placement at Thapar</p>
              <p>Have any doubts regarding the placements?</p> -->
