--- a/placement.html
+++ b/placement.html
@@ -165,13 +165,14 @@
 </div>
 <div class="row">
 
+ <!-- style="text-align: center;" -->
 
 <div class="col-md-4 ftco-animate" style="-webkit-box-flex: 0;
     -ms-flex: 0 0 50%;
     flex: 0 0 50%;
     max-width: 50%;">
-<div class="block-7">
-<div class="img" style="background-image: url(images/juneja.jpg);height:520px; width: 520px; border-radius: 50%;"></div>
+<div class="block-7" style="text-align: center;">
+<div class="img" style="background-image: url(images/juneja.jpg);height:520px; width: 520px; border-radius: 50%;text-align: center"></div>
 <div class="text-center p-4">
 <span class="excerpt d-block"style="text-align: center;">Mr RITURAAJ JUNEJA</span>
 <p style="text-align: center;">CIEO at Thapar University </p>
