--- a/alumni.html
+++ b/alumni.html
@@ -118,10 +118,10 @@
               <div class="faded">
                 <p style="text-align: left;">Distinguished Scientist (Retired from BARC after 42 years of service)</p>
                 <p style="text-align: left;">Had been a Fellow, Indian National Academy of engineers and President Robotics Society of India</p>
-                <br><br><br><br><br><br><br><br><br><br><br><br>
+                <br><br><br><br><br><br><br><br><br><br><br>
 
                 <p style="font-weight: bold;">DATE: 21 Sept,2020 </p>
-                <p style="font-weight: bold;">TIME: <span style="color:#640000"> 10:00-11:00 AM </span>
+                <p style="font-weight: bold;">TIME: <span style="color:#640000"> 10:00-11:00 AM ; 2:00-3:00 PM </span>
                 </p>
                 <a href="https://tiet.zoom.us/j/97902085330?pwd=SWFDY3QyUHplOEF2N2R5MGc3VkczQT09" target="_blank"
                   class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera"
@@ -298,7 +298,7 @@
                 <p style="text-align: left;">Vice President, Marketing, Reltio.<br>Worked in organizations like Samtel, Honda Motors in India and Amdocs, Oracle, Veeva Systems in the US</p>
                 <p style="text-align: left;">Alumunus Santa Clara University</p>
                 <p style="font-weight: bold;">DATE: 21 Sept,2020 </p>
-                <p style="font-weight: bold;">TIME: <span style="color:#640000">11:00-12:00 Noon</span></p>
+                <p style="font-weight: bold;">TIME: <span style="color:#640000">11:00-12:00 Noon; 12:00-1:00 PM</span></p>
                 <br> 
                 <a href="https://tiet.zoom.us/j/97902085330?pwd=SWFDY3QyUHplOEF2N2R5MGc3VkczQT09" target="_blank"
                   class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera"
@@ -881,7 +881,7 @@
         </tr>
         <tr>
           <th scope="row">4:00-5:00 PM</th>
-          <td>MBA+Liberal Arts+Masters and Others</td>
+          <td> All Streams </td>
           <td>Hardeep Brar, Rajesh Uppal</td>
           <td><a href="https://tiet.zoom.us/j/3327136261? pwd=OUh5RWdRWEtXQzgyek8 vcE5YT1lrUT09" target="_blank"
               class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera"
