--- a/placement.html
+++ b/placement.html
@@ -175,7 +175,9 @@
 <div class="img" style="background-image: url(images/juneja.jpg);height:520px; width: 520px; border-radius: 50%;text-align: center"></div>
 <div class="text-center p-4">
 <span class="excerpt d-block"style="text-align: center;">Mr RITURAAJ JUNEJA</span>
-<p style="text-align: center;">CIEO at Thapar University </p>
+<p style="text-align: center;">CIEO at Thapar Institute of Engineering & Technology </p>
+<a href="https://tiet.zoom.us/j/93100957525?pwd=bGp2ZmtKdU5hRVBNWWNZSy9IMkU5Zz09"  target="_blank" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect With Us</a><br><br>
+
 
 <a href="https://www.linkedin.com/in/rituraaj/"  target="_blank" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-linkedin" style="padding: 10px;"></span>CONNECT</a>
 </div>
@@ -189,7 +191,9 @@
 <div class="img" style="background-image: url(images/bawa.jpg);height:520px; width: 520px; border-radius: 50%;"></div>
 <div class="text-center p-4">
 <span class="excerpt d-block"style="text-align: center">Mr H.S. BAWA</span>
-<p style="text-align: center;">Head - Training & Placement deptt. </p>
+<p style="text-align: center;">Head - Training & Placement Dept </p>
+
+<a href="https://tiet.zoom.us/j/93100957525?pwd=bGp2ZmtKdU5hRVBNWWNZSy9IMkU5Zz09"  target="_blank" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect With Us</a><br><br>
 
 <a href="https://www.linkedin.com/in/h-s-bawa-38524332/?originalSubdomain=in"  target="_blank" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-linkedin" style="padding: 10px;"></span>CONNECT</a>
 </div>
