--- a/doaa.html
+++ b/doaa.html
@@ -82,7 +82,7 @@ margin-right: auto; background-image: url(images/faculty/doaa.jpg);height:520px;
 <p style="text-align: justify;"> Dr. S. S. Bhatia, Professor in Mathematics   has been serving as Dean of Academic Affairs (DOAA) since September 2014. His academic journey at TIET started in the  Year 1987 when he joined as Lecturer in  School of Mathematics . He has been Head, School of Mathematics twice before joining as DOAA. He has been teaching various courses in engineering mathematics at TIET. His areas of specialisation are Fourier Series & Functional Analysis.  His research interests include Fixed point theory, L-1 Convergence  of trigonometric series and Sequence spaces. He has guided 14 PhD students and has more than 100  publications in journals of international and national repute. He has undertaken various Govt. aided Research projects at TIET. </p>
 
 
-<a href="https://tiet.zoom.us/my/msingh/"  target="_blank" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect With Us</a>
+<a href="https://tiet.zoom.us/my/diptobarman"  target="_blank" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect With Us</a>
 </div>
 </div>
 </div>
@@ -90,85 +90,6 @@ margin-right: auto; background-image: url(images/faculty/doaa.jpg);height:520px;
 </div>
 </div>
 </section>
-<div class="container" style="margin-top:100px;">
-  <p style="font:250px; font-weight: bold;text-align: center;color:#640000">SCHEDULE</p>
-  <table class="table">
-    <thead class="thead-dark">
-
-      <tr>
-        <th scope="col" style="color:white">Session</th>
-        <th scope="col" style="color:white">Time</th>
-        <th scope="col" style="color:white">Activity</th>
-        <th scope="col" style="color:white">Team</th>
-
-        <th scope="col" style="color:white">Link</th>
-
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>1</td>
-        <th scope="row">
-          10:00 AM to 11:50 PM</th>
-        <td>Q&A</td>
-        <td><!-- Dr. Inderveer Chana (Dean, Student Affairs)<br>
-          Dr. Mahesh Sharma(Asso. Dean, Student Affairs )<br>
-          Dr. Ashish Purohit (Co. warden)<br>
-          Dr. Gagandeep Kaur (Warden Hostel N) <br>
-          Dr. S C Bose (Warden Hostel C) --><br>
-        </td>
-
-        <td><a href="https://tiet.zoom.us/j/98009489667?pwd=WnJnMDY5YnpIVDFoeVdYVklzV0xjdz09" target="_blank"
-            class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera"
-              style="padding: 10px;"></span>Connect With Us</a><br><br>
-
-          Meeting ID:  980 0948 9667<br>
-          Passcode: 006042
-        </td>
-      </tr>
-      <tr>
-        <td>2</td>
-        <th scope="row">
-          12:00 PM to 01:50 PM</th>
-          <td>Q&A</td>
-          <td><!-- Dr. Inderveer Chana (Dean, Student Affairs)<br>
-            Dr. Mahesh Sharma(Asso. Dean, Student Affairs )<br>
-            Dr. Ashish Purohit (Co. warden)<br>
-            Dr. Anju Bala (Warden Hostel I) <br>
-            Dr. Neeraj Grover (Warden Hostel M) --><br>
-          </td>
-
-        <td><a href="https://tiet.zoom.us/j/98009489667?pwd=WnJnMDY5YnpIVDFoeVdYVklzV0xjdz09" target="_blank"
-          class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera"
-            style="padding: 10px;"></span>Connect With Us</a><br><br>
-
-        Meeting ID:  980 0948 9667<br>
-        Passcode: 006042
-      </td>
-      </tr>
-      <tr>
-        <td>3</td>
-        <th scope="row">
-          03:00 PM to 04:50 PM</th>
-          <td>Q&A</td>
-          <td><!-- Dr. Inderveer Chana (Dean, Student Affairs)<br>
-            Dr. Mahesh Sharma(Asso. Dean, Student Affairs )<br>
-            Dr. Ashish Purohit (Co. warden)<br>
-            Dr. Amrita Sinha (Warden Hostel G) <br>
-            Dr.Madhup Mittal (Warden Hostel M) --><br>
-          </td>
-
-        <td><a href="https://tiet.zoom.us/j/98009489667?pwd=WnJnMDY5YnpIVDFoeVdYVklzV0xjdz09" target="_blank"
-          class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera"
-            style="padding: 10px;"></span>Connect With Us</a><br><br>
-
-        Meeting ID:  980 0948 9667<br>
-        Passcode: 006042
-      </td>
-
-    </tbody>
-  </table>
-</div>
 
 <div style="padding-bottom:100px; margin-left:500px; margin-right:500px;">
 <a href="http://www.thapar.edu/"  target="_blank" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-home" style="padding: 10px;"></span>For More Info</a>
