--- a/dosa.html
+++ b/dosa.html
@@ -93,9 +93,9 @@ margin-right: auto; background-image: url(images/dosamaam.jpeg);height:550px; wi
                 offers a perfect student life. Live it to believe it.</p>
 
 
-              <a href="https://tiet.zoom.us/j/98009489667?pwd=WnJnMDY5YnpIVDFoeVdYVklzV0xjdz09" target="_blank"
+              <!-- <a href="https://tiet.zoom.us/j/98009489667?pwd=WnJnMDY5YnpIVDFoeVdYVklzV0xjdz09" target="_blank"
                 class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera"
-                  style="padding: 10px;"></span>Connect With Us</a>
+                  style="padding: 10px;"></span>Connect With Us</a> -->
                   <!-- <p style="text-align: center;"> Meeting ID: 980 0948 9667</p>
                   <p style="text-align: center;"> Passcode: 006042</p> -->
             </div>
@@ -106,7 +106,7 @@ margin-right: auto; background-image: url(images/dosamaam.jpeg);height:550px; wi
     </div>
   </section>
 
-  <div class="container" style="margin-top:100px;">
+  <div class="container" style="margin-top:50px;">
     <p style="font:250px; font-weight: bold;text-align: center;color:#640000">SCHEDULE</p>
     <table class="table">
       <thead class="thead-dark">
