--- a/alumni.html
+++ b/alumni.html
@@ -805,7 +805,7 @@
           <th scope="row">10:00-11:00 AM</th>
           <td>All - First cum first serve</td>
           <td>Rachna Mahajan, Gauri Singh Shandilaya,<br> Param Thind, Manjit Singh , Rajiv Sood </td>
-          <td><a href="https://tiet.zoom.us/j/3327136261? pwd=OUh5RWdRWEtXQzgyek8 vcE5YT1lrUT09" target="_blank"
+          <td><a href="https://tiet.zoom.us/j/97902085330?pwd=SWFDY3QyUHplOEF2N2R5MGc3VkczQT09" target="_blank"
               class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera"
                 style="padding: 10px;"></span>Connect With Us</a><br><br>
 
@@ -818,7 +818,7 @@
           <th scope="row">11:00-12:00 PM</th>
           <td>All - First cum first serve</td>
           <td>Jyotsna Gupta Saxena, D P Sabharwal, <br>Rajesh Uppal, Rakesh Anand,<br>Ajay Khanna</td>
-          <td><a href="https://tiet.zoom.us/j/3327136261? pwd=OUh5RWdRWEtXQzgyek8 vcE5YT1lrUT09" target="_blank"
+          <td><a href="https://tiet.zoom.us/j/97902085330?pwd=SWFDY3QyUHplOEF2N2R5MGc3VkczQT09" target="_blank"
               class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera"
                 style="padding: 10px;"></span>Connect With Us</a><br><br>
 
@@ -831,7 +831,7 @@
           <th scope="row">12:00-1:00 PM</th>
           <td>Computer Science + MCA</td>
           <td>Ajay Khanna, Rachna Mahajan</td>
-          <td><a href="https://tiet.zoom.us/j/3327136261? pwd=OUh5RWdRWEtXQzgyek8 vcE5YT1lrUT09" target="_blank"
+          <td><a href="https://tiet.zoom.us/j/97902085330?pwd=SWFDY3QyUHplOEF2N2R5MGc3VkczQT09" target="_blank"
             class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera"
               style="padding: 10px;"></span>Connect With Us</a><br><br>
 
@@ -844,7 +844,7 @@
           <th scope="row">1:00-2:00 PM</th>
           <td>Mechanical</td>
           <td>DP Sabarwal, Param Thind</td>
-          <td><a href="https://tiet.zoom.us/j/3327136261? pwd=OUh5RWdRWEtXQzgyek8 vcE5YT1lrUT09" target="_blank"
+          <td><a href="https://tiet.zoom.us/j/97902085330?pwd=SWFDY3QyUHplOEF2N2R5MGc3VkczQT09" target="_blank"
               class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera"
                 style="padding: 10px;"></span>Connect With Us</a><br><br>
 
@@ -870,7 +870,7 @@
           <th scope="row">3:00-4:00 PM</th>
           <td>Civil</td>
           <td>Gauri Singh Shandilaya, Manoj Malhotra,<br> Gagan Gupta, Ish Ahuja</td>
-          <td><a href="https://tiet.zoom.us/j/3327136261? pwd=OUh5RWdRWEtXQzgyek8 vcE5YT1lrUT09" target="_blank"
+          <td><a href="https://tiet.zoom.us/j/97902085330?pwd=SWFDY3QyUHplOEF2N2R5MGc3VkczQT09" target="_blank"
               class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera"
                 style="padding: 10px;"></span>Connect With Us</a><br><br>
 
@@ -883,7 +883,7 @@
           <th scope="row">4:00-5:00 PM</th>
           <td> All Streams </td>
           <td>Hardeep Brar, Rajesh Uppal</td>
-          <td><a href="https://tiet.zoom.us/j/3327136261? pwd=OUh5RWdRWEtXQzgyek8 vcE5YT1lrUT09" target="_blank"
+          <td><a href="https://tiet.zoom.us/j/97902085330?pwd=SWFDY3QyUHplOEF2N2R5MGc3VkczQT09" target="_blank"
               class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera"
                 style="padding: 10px;"></span>Connect With Us</a><br><br>
 
