--- a/chemical.html
+++ b/chemical.html
@@ -32,7 +32,7 @@
       </button>
       <div class="collapse navbar-collapse" id="ftco-nav">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item"><a href="home.html" class="nav-link">Home</a></li>
+          <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
           <li class="nav-item active"><a href="streams.html" class="nav-link">Engineering Streams</a></li>
 
           <li class="nav-item"><a href="alumni.html" class="nav-link">Sessions with our Alumni</a></li>
@@ -59,7 +59,7 @@
       <!-- <div class="container"> -->
       <!-- <div class="row no-gutters slider-text align-items-end"> -->
       <!-- <div class="col-md-9 ftco-animate pb-5"> -->
-      <!-- <p class="breadcrumbs mb-2"><span class="mr-2"><a href="home.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Engineering Streams <i class="ion-ios-arrow-forward"></i></span></p> -->
+      <!-- <p class="breadcrumbs mb-2"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Engineering Streams <i class="ion-ios-arrow-forward"></i></span></p> -->
       <h1 class="mb-0 bread">Chemical Engineering</h1>
       <!-- </div> -->
       <!-- </div> -->
@@ -237,7 +237,7 @@
 
           <h2 class="footer-heading">Quick Links</h2>
           <ul class="list-unstyled">
-            <li><a href="home.html" class="py-2 d-block">Home</a></li>
+            <li><a href="index.html" class="py-2 d-block">Home</a></li>
             <li><a href="streams.html" class="py-2 d-block">Engineering Streams</a></li>
             <li><a href="alumni.html" class="py-2 d-block">Sessions With Our Alumni</a></li>
             <li><a href="placement.html" class="py-2 d-block">IEP Cell</a></li>
